# rhai-loco

./: .gitignore  Cargo.toml  README.md
assets/scripts/: on_login.rhai
assets/scripts/hello/: world.rhai
assets/scripts/tera/filters/: README.md  my_filters.rhai
src/: lib.rs
