[package]
name = "rhai-loco"
version = "0.1.0"
rust-version = "1.66.0"
edition = "2021"
authors = ["Stephen Chung"]
description = "Rhai scripting engine integration for Loco."
homepage = "https://rhai.rs"
repository = "https://github.com/rhaiscript/rhai-loco"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
rhai = { version = "1.17", features = ["only_i64", "decimal", "sync", "serde"] }
loco-rs = { version = "0.3.1" }
axum = { version = "0.7.1" }
tera = { version = "1" }
tracing = { version = "0.1.40" }
async-trait = { version = "0.1.74" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#smallvec = { version = "1.7.0", default-features = false, features = ["union", "const_new", "const_generics"] }
#thin-vec = { version = "0.2.13", default-features = false }
#smartstring = { version = "1.0.0", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
#opt-level = "z"     # optimize for size
#panic = 'abort'     # remove stack backtrace for no-std
